--- a/posts/2020-08-01.md
+++ b/posts/2020-08-01.md
@@ -1,4 +1,4 @@
-# Change Data Capture
+# Change Data Capture (part 1)
 
 **DRAFT**
 
@@ -8,34 +8,36 @@ What makes this challenging? Why not just write out a log of whatever happens to
 
 If you are familiar with the modern stream storage system---Kafka, Kinesis, Pulsar, Azure Event Hubs---you may know how awkwardly our three desiderata interact. If you want performance, you should expect to read concurrently from streams that are not totally ordered. If you want robustness you'll need to be prepared for duplication in your streams as at-least-once stream storage systems cope with anomalies. Life can be pretty hard if you want correct answers in a distributed setting.
 
-This post will talk through our first revision of our *change data capture* format: how we write down and read back changes to data. This format allows arbitrary duplication and reordering of its messages, among other anomalies, while maintaining a compact footprint in memory. These features allow us to use streaming infrastructure that does not protect against these issues (most of them), but also to introduce several new benefits which we will get to by the post's end.
+This post will talk through a *change data capture protocol*: how one writes down and reads back changes to data. This protocol allows arbitrary duplication and reordering of its messages, among other anomalies, while maintaining a compact footprint in memory. These features allow us to use streaming infrastructure that does not protect against these issues (most of them), but they also allow us to introduce several new benefits which we will get to by the post's end.
+
+It's probably worth stressing that this isn't something Materialize is landing tomorrow. The post is more of an exploration of how we can capture and replay the data that Differential Dataflow produces. The code will be landing in the [Differential Dataflow repository](https://github.com/TimelyDataflow/differential-dataflow), and should be broadly useful. This is also only part 1; we'll talk through the protocol and a single-threaded implementation of the reader, but we won't get as far as the data-parallel implementation in differential dataflow (which [does seem to work](https://twitter.com/frankmcsherry/status/1291828794513403910)!).
 
 ## Data that Change
 
 Let's start out by looking at the problem we have to deal with.
 
-Materialize maintains computations over data that change. The data are large relational collections whose individual records may come and go for reasons we can't anticipate or constrain. All we know is that as time progresses, the data change.
+Materialize maintains computations over data that change. The data are large relational collections whose individual records may come and go for reasons we can neither anticipate or constrain. All we know is that as time progresses, the data change.
 
-We can record the changes that happen to the data by writing down the records that are added to and removed from the collection at each time. Materialize is based on [differential dataflow]() which does this with "update triples" of 1. the record that change, 2. the time it changed, and 3. how it changed (was it added or removed).
+We can record the changes that happen to the data by writing down the records that are added to and removed from the collection at each time. Materialize is based on [differential dataflow](https://github.com/TimelyDataflow/differential-dataflow) which does this with "update triples" of 1. the record that changed, 2. the time it changed, and 3. how it changed (was it added or removed).
 
 Let's take an example:
 ```
-// three records are added
+// four records are added
+(record0, time0, +1)
 (record0, time0, +1)
 (record1, time0, +1)
 (record2, time0, +1)
 
 // one record is "updated"
 (record1, time1, -1)
-(record4, time1, +1)
+(record2, time1, +1)
 
 // two records are deleted
 (record0, time2, -1)
-(record4, time2, -1)
+(record2, time2, -1)
 ```
 
-We see a sequence of changes, ordered by the three times `time0`, `time1`, and `time2`. At `time0` we see three records are introduced. We don't know if these are the "initial data", but we don't need to; we are just transcribing the changes that occur. At `time1` we see both a deletion and an addition of a record. We can interpret this (perhaps incorrectly) as an update to `record1` that changes it to `record4`; again we aren't worried about the reason for the change, just what the change was. Finally, at `time2` we see the deletion of two records.
-
+We see a sequence of changes, ordered by the three times `time0`, `time1`, and `time2`. At `time0` we see four records are introduced. It turns out one record was added twice but collections are multisets so that can happen. At `time1` we see both a deletion and an addition of a record. We can interpret this (perhaps incorrectly) as an update to `record1` that changes it to `record4`; again we aren't worried about the reason for the change, just what the change was. Finally, at `time2` we see the deletion of two records.
 
 ![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure1.png)
 
@@ -49,41 +51,42 @@ Our history has *updates to data*, but we can also provide *progress statements*
 Here is a history with progress statements.
 ```
 update (record0, time0, +1)
+update (record0, time0, +1)
 update (record1, time0, +1)
 update (record2, time0, +1)
 finish time0
 update (record1, time1, -1)
-update (record4, time1, +1)
+update (record2, time1, +1)
 finish time1
 update (record0, time2, -1)
-update (record4, time2, -1)
+update (record2, time2, -1)
 finish time2
 finish time3
 ...
 ```
 
-I put in both a `finish time2` to show that we can close out the `time2` updates, but also a `finish time3` to show that we might want to communicate that times are closed even when there are no updates.
+I put in a `finish time2` statement to show that we can close out the `time2` updates, but also a `finish time3` statement to show that we might want to communicate that times are closed even when there are no updates.
 
 ## Anomalies and Opportunities
 
-Because computer systems are complicated, we can't simply write down the history above and expect everything to work out. Because computer systems are complicated, they will occasionally re-order or duplicate records. Mostly, this is because people want to use more than one computer, and as soon as you start doing that the two computers rarely agree on how things were supposed to happen.
+Because computer systems are complicated, we can't simply write down the history above and expect everything to work out. Because computer systems are complicated, they will occasionally re-order or duplicate records. Mostly, this is because people want to use more than one computer, and as soon as you start doing that any two computers rarely agree on how things were supposed to happen.
 
 Anyhow, modern stream storage like Kafka, Kinesis, Pulsar, and Azure Event Hubs have quirks that mean if you want both performance and fault-tolerance, your data might get shuffled around and duplicated. On the plus side, you are pretty sure that what you write will be recorded and eventually available to readers. This is way better than the alternative of losing data; having too much information beats having not enough information.
 
-It probably wouldn't take much to convince you that the history as written above loses something when you reorder and duplicate rows in it. If you repeat an `update` statement, you might believe that you should do the update twice. If you reorder a `progress` statement, you may prematurely conclude that the data have ceased changing and then miss some updates. The format as presented above is pretty easy for us humans to read, but it isn't great when uncooperative computers get their hands on it and change how it is laid out.
+It probably wouldn't take much to convince you that the history as written above loses something when you reorder and duplicate rows in it. If you repeat an `update` statement, you might believe that you should do the update twice (we actually do have a repeat in our history, but it is intended!). If you reorder a `progress` statement, you may prematurely conclude that the data have ceased changing and then miss some updates. The format as presented above is pretty easy for us humans to read, but it isn't great when uncooperative computers get their hands on it and change how it is laid out.
 
-We'll want a format that protects us against these vagaries of uncooperative computers, specifically duplication and reordering.
+We'll want a way to present the information that protects us against these vagaries of uncooperative computers, specifically duplication and reordering.
 
-At the same time, immunizing ourselves to duplication and reordering provides us with some new opportunities.
+At the same time, if we immunize ourselves to duplication and reordering we are provided with some new opportunities.
 
-* If our representation can be written and read in any order, then we can deploy a large number of concurrent writers and readers. We may be able to grind through a history much more quickly as a result.
+* If our representation can be written and read in any order, then we can deploy a large number of concurrent writers and readers. We may be able to grind through a history much more quickly as a result. The number of readers and writers can be scaled up and down, and doesn't need to be baked in to the representation.
 
 * If our representation can tolerate arbitrary duplication, then we can use multiple computers to reduntantly compute and write out the results. This provides so-called *active-active* fault-tolerance, which duplicates work but insures against the failure (or planned outage) of individual workers.
 
     ![Active-active replication](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/active.png)
 
 
-There are several other advantages to these degrees of robustness, from resharding streams of data to easing the reintroduction of new or recovered replicas. Migrating between query plans without interruption. Stuff like that.
+There are several other advantages to these degrees of robustness, from resharding streams of data to easing the reintroduction of new or recovered replicas. Migrating between query plans without interruption. Stuff like that. I just made those up, but lots of operational simplicity emerges.
 
 ## Materialize CDCv2
 
@@ -91,23 +94,40 @@ Let's get right in to the proposal.
 
 ### A Sketch
 
-We will make two types of statements, both of which will be statements true about the final history. We will make these statements only when we are certain they are true, and they will remain true from that point on.
+We will make two types of statements, both of which will be statements that are true about the final history, though statements we can make before the history is complete. We will make these statements only once we are certain they are true and will remain true.
 
 * *Update statements* have the form `update (data, time, diff)` and indicate that the change that `data` undergoes at `time` is exactly `diff`.
 
 * *Progress statements* have the form `progress (time, count)` and report the number of distinct updates that occur at `time`.
 
-In picture form, it might look something like this:
+For the example from up above, we might write
+
+```
+update (record0, time0, +2)
+update (record1, time0, +1)
+update (record2, time0, +1)
+progress (time0, 3)
+update (record1, time1, -1)
+update (record2, time1, +1)
+progress (time1, 2)
+update (record0, time2, -1)
+update (record2, time2, -1)
+progress (time2, 2)
+progress (time3, 0)
+...
+```
+
+There could actually be other times too, and if so we should write them down with their zero counts. In picture form, it might look something like this:
 
 ![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure2.png)
 
 Clearly I've had to make up some new times to fit around `time0` and `time1`, but I hope you'll excuse that!
 
-A stream of these statements may be arbitrarily duplicated and reordered, and we can still recover as much of the history as is fully covered by the update and progress statements.
+The statements above may be arbitrarily duplicated and reordered, and we can still recover as much of the history as is fully covered by the update and progress statements.
 
-We will work through the details of the recovery process, but ideally the intuition is clear about why this might work. As we collect statements, we start to re-assemble the puzzle pieces of the history of the collection. We can place updates at moments in time, and we learn how many updates it takes for the set at a time to be complete. We can perform this work even if statements come out of order, and any duplicate information ideally corroborates what we already know but can otherwise be discarded.
+We will work through the details of the recovery process, but ideally the intuition is clear about why this might work. As we collect statements, we can start to re-assemble the puzzle pieces of the history of the collection. We can place updates at moments in time, and we learn how many updates it takes for the set at a time to be complete. We can perform this work even if statements come out of order, and any duplicate information should just corroborate what we already know.
 
-In addition to putting the puzzle back together, we get the appealing (and often overlooked) property that the memory footprint of the recovery process can be proportional only to those statements that have been received for times that have not yet been recovered. We do not need to maintain unboundedly long histories. As moments in time become finished we can flip a bit for the time to indicate that it is full and discard all of the updates; as intervals in time become finished we can retain only their upper and lower bounds.
+In addition to putting the puzzle back together, we get the appealing (and often overlooked) property that we do not need to maintain unboundedly long histories to do so. As moments in time become finished we can flip a bit for the time to indicate that it is full and discard all of the updates we have, as well as future updates for the time. As intervals in time become finished we can retain only their upper and lower bounds.
 
 ### An Implementation
 
@@ -119,6 +139,8 @@ enum Message<Data, Time, Diff> {
     ///
     /// Each statement contains a datum, a time, and a difference, and asserts
     /// that the multiplicity of the datum changes at the time by the difference.
+    ///
+    /// There should be at moste one occurrence of each `(data, time)` pair.
     Updates(Vec<(Data, Time, Diff)>),
     /// A statement about the number of updates within a time interval.
     Progress(Progress<Time>),
@@ -136,29 +158,31 @@ struct Progress<Time> {
     /// The upper bound of times contained in this statement.
     pub upper: Vec<Time>,
     /// All non-zero counts for times beyond `lower` and not beyond `upper`.
+    ///
+    /// Each time must be beyond `lower` and not beyond `upper`, and occur
+    /// at most once in the list.
     pub counts: Vec<(Time, usize)>,
 }
 ```
-The `lower` and `upper` bounds are each vectors of time, which might seem odd at first. In our world, times aren't necessarily *totally* ordered, and an interval of time is better explained by two *sets* of times, where the interval contains those times that are greater than or equal to an element of `lower` and greater than or equal to no elements of `upper`. You are welcome to think of them as integers, but bear in mind that `upper` could be empty (which is how one indicates an interval that ends a stream).
+The `lower` and `upper` bounds are each vectors of time, which might seem odd at first. In our world, times aren't necessarily *totally* ordered, and an interval of time is better explained by two *sets* of times, where the interval contains those times that are greater than or equal to an element of `lower` and greater than or equal to no elements of `upper`. You are welcome to think of them as integers, but bear in mind that `upper` could also be *empty* (which is how one indicates an interval that ends a stream).
 
 Here is a picture that hints at what is different with the progress statements:
 
 ![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure3.png)
 
-Notice that rather than a record for each time, we have intervals of times in which we record only those counts with non-zero times.
+Notice that rather than one progress message for each time, we have intervals of times in which we record only those counts with non-zero times.
 
-One detail we should shake out now is that we've introduce some non-determinism into our format: how we choose to batch updates and progress statements. It's worth clearly stating that we will be able to tolerate not only literal duplication and re-ordering of messages, but also duplication and re-ordering of the *information* in the messages, even with different batching of that information.
+You may have noticed that we've introduced some non-determinism into our protocol: how we batch updates and progress statements. It's worth clearly stating that we will be able to tolerate not only literal duplication and re-ordering of messages, but also duplication and re-ordering of the *information* in the messages, even with different batching of that information.
 
 For example, the following figure presents two ways we could have batched progress information.
 
 ![Data change as time advances](https://github.com/frankmcsherry/blog/blob/master/assets/cdc/figure4.png)
 
-Even though there is not duplication between the two sets of progress statements, we'll end up recovering the puzzle just fine if someone interleaved the statements from the right and left side.
+Even though there is not literal duplication between the two sets of progress statements, we'll end up recovering the puzzle just fine if someone mixed up the statements from the right and left side (or any other way that does not present conflicting information).
 
 ### An Iterator
 
-
-We'll work through how one might implement this in a timely dataflow system, but let's start with the simpler task of re-ordering and deduplicating an arbitrarily mangled input stream of `Message` records.
+Although we'll eventually work through how one might implement this in a timely dataflow system (but not today), let's start with the simpler task of re-ordering and deduplicating an arbitrarily mangled input stream of `Message` records.
 
 The iterater that I've written wraps around an arbitrary `I: Iterator<Item = Message>` which is Rust's way of saying "any specific type that can produce a sequence of `Message` items". It also wraps a bit of additional state as well, used to keep track of what we've seen. I've left the comments in, but if everything looks intimidating there are just six fields.
 
@@ -215,7 +239,7 @@ where
 }
 ```
 
-I thought for demonstration purposes I would have the iterator produce the `update` and `finish` statements we had back in the simple history. For reasons, I'd rather produce a batch of updates and one `finish` statement, all at the same time (it is easier to do that once, than to trickle out updates one by one; you need another state machine for that).
+I thought for demonstration purposes I would have the iterator produce the `update` and `finish` statements we had back in the simple history. For reasons, I'd rather produce a batch of updates and one `finish` statement, all at the same time (it is easier to do that once for each call, than to trickle out updates one by one; you need another state machine to do that).
 ```rust
 impl<D, T, R, I> Iterator for Ordered<I, D, T, R>
 where
@@ -323,3 +347,13 @@ The last bit of logic is to look at what evidence we have accumulated, both `sel
         return Some((to_publish, lower_bound));
     }
 ```
+
+That's it!
+
+I'm sure it's been a bit of an exercise, but I hope the hand-drawn pictures have re-assured you that such a thing is possible.
+
+## Conclusions
+
+We've seen how you can set up a protocol that records the timestamped changes collections undergo, in a way that is robust to duplication and reordering (and re-batching, for what that's worth). Just how exciting this is remains to be seen, but my sense is that this introduces substantial operational simplicity to settings where systems fail, systems lag, and generally folks may need to repeat work to be sure that it has been done. If multiple systems need to stay live as part of a live migration from one to another, or if the data itself needs to be migrated from relatively faster and pricier storage off to somewhere colder, this protocol seems helpful.
+
+There are surely other protocols that provide qualitatively similar properties; I'm not trying to claim that we've invented anything here. But, part of the exercise is making sure you understand a thing, and I've certainly been helped by that. I hope you have as well!
