--- a/posts/2020-08-01.md
+++ b/posts/2020-08-01.md
@@ -1,6 +1,6 @@
 # Change Data Capture (part 1)
 
-**DRAFT**
+This post is re-blogged from [the Materialize blog](https://materialize.io/change-data-capture-part-1/).
 
 At Materialize we traffic in computation over data that change. As a consequence, it is important to have a way to write down and read back changes to data. An **unambiguous**, **robust**, and **performant** way to write down and read back changes to data.
 
@@ -69,15 +69,15 @@ I put in a `finish time2` statement to show that we can close out the `time2` up
 
 ## Anomalies and Opportunities
 
-Because computer systems are complicated, we can't simply write down the history above and expect everything to work out. Because computer systems are complicated, they will occasionally re-order or duplicate records. Mostly, this is because people want to use more than one computer, and as soon as you start doing that any two computers rarely agree on how things were supposed to happen.
+Because computer systems are complicated, we can't simply write down the history above and expect everything to work out. Because computer systems are complicated, they will occasionally reorder or duplicate records. Mostly, this is because people want to use more than one computer, and as soon as you start doing that any two computers rarely agree on how things were supposed to happen.
 
 Anyhow, modern stream storage like Kafka, Kinesis, Pulsar, and Azure Event Hubs have quirks that mean if you want both performance and fault-tolerance, your data might get shuffled around and duplicated. On the plus side, you are pretty sure that what you write will be recorded and eventually available to readers. This is way better than the alternative of losing data; having too much information beats having not enough information.
 
-It probably wouldn't take much to convince you that the history as written above loses something when you reorder and duplicate rows in it. If you repeat an `update` statement, you might believe that you should do the update twice (we actually do have a repeat in our history, but it is intended!). If you reorder a `progress` statement, you may prematurely conclude that the data have ceased changing and then miss some updates. The format as presented above is pretty easy for us humans to read, but it isn't great when uncooperative computers get their hands on it and change how it is laid out.
+It probably wouldn't take much to convince you that the history as written above loses something when you reorder and duplicate rows in it. If you repeat an `update` statement, you might believe that you should do the update twice (we actually do have a repeat in our history, but it is intended!). If you reorder a `finish` statement, you may prematurely conclude that the data have ceased changing and then miss some updates. The format as presented above is pretty easy for us humans to read, but it isn't great when uncooperative computers get their hands on it and change how it is laid out.
 
 We'll want a way to present the information that protects us against these vagaries of uncooperative computers, specifically duplication and reordering.
 
-At the same time, if we immunize ourselves to duplication and reordering we are provided with some new opportunities.
+At the same time, if we immunize ourselves to duplication and reordering we are provided with some new opportunities!
 
 * If our representation can be written and read in any order, then we can deploy a large number of concurrent writers and readers. We may be able to grind through a history much more quickly as a result. The number of readers and writers can be scaled up and down, and doesn't need to be baked in to the representation.
 
@@ -94,11 +94,11 @@ Let's get right in to the proposal.
 
 ### A Sketch
 
-We will make two types of statements, both of which will be statements that are true about the final history, though statements we can make before the history is complete. We will make these statements only once we are certain they are true and will remain true.
+We will make two types of statements, each of which will be statements that are both true about the final history and can be made before that history is complete. We will make these statements only once we are certain they are and will remain true.
 
-* *Update statements* have the form `update (data, time, diff)` and indicate that the change that `data` undergoes at `time` is exactly `diff`.
+* *Update statements* have the form `update (data, time, diff)` and indicate that the change that `data` undergoes at `time` is exactly `diff`. This means there should be only one entry for each `(data, time)`: whatever the accumulated `diff` values end up being. We don't write down updates that have a zero value for `diff`.
 
-* *Progress statements* have the form `progress (time, count)` and report the number of distinct updates that occur at `time`.
+* *Progress statements* have the form `progress (time, count)` and report the number of distinct non-zero updates that occur at `time`.
 
 For the example from up above, we might write
 
@@ -131,7 +131,7 @@ In addition to putting the puzzle back together, we get the appealing (and often
 
 ### An Implementation
 
-First off, we are going to change the structure of statements to run a bit more lean. Update statements will contain batches of updates, and progress statements will be about intervals of times. The specific Rust types that I am use are
+First off, we are going to change the structure of statements to run a bit more lean. Update statements will contain batches of updates, and progress statements will be about intervals of times. The specific Rust types that I am using are
 ```rust
 /// A message in the CDC V2 protocol.
 enum Message<Data, Time, Diff> {
@@ -172,7 +172,7 @@ Here is a picture that hints at what is different with the progress statements:
 
 Notice that rather than one progress message for each time, we have intervals of times in which we record only those counts with non-zero times.
 
-You may have noticed that we've introduced some non-determinism into our protocol: how we batch updates and progress statements. It's worth clearly stating that we will be able to tolerate not only literal duplication and re-ordering of messages, but also duplication and re-ordering of the *information* in the messages, even with different batching of that information.
+You may have noticed that we've introduced some non-determinism into our protocol: how we batch updates and progress statements. It's worth clearly stating that we will be able to tolerate not only literal duplication and reordering of messages, but also duplication and reordering of the *information* in the messages, even with different batching of that information.
 
 For example, the following figure presents two ways we could have batched progress information.
 
@@ -182,14 +182,14 @@ Even though there is not literal duplication between the two sets of progress st
 
 ### An Iterator
 
-Although we'll eventually work through how one might implement this in a timely dataflow system (but not today), let's start with the simpler task of re-ordering and deduplicating an arbitrarily mangled input stream of `Message` records.
+Although we'll eventually work through how one might implement this in a timely dataflow system (but not today), let's start with the simpler task of reordering and deduplicating an arbitrarily mangled input stream of `Message` records.
 
 The iterater that I've written wraps around an arbitrary `I: Iterator<Item = Message>` which is Rust's way of saying "any specific type that can produce a sequence of `Message` items". It also wraps a bit of additional state as well, used to keep track of what we've seen. I've left the comments in, but if everything looks intimidating there are just six fields.
 
 ```rust
-/// Enumerates an in-order, de-duplicated update stream, from a source that may not
+/// Enumerates an in-order, deduplicated update stream, from a source that may not
 /// have these properties.
-struct Orderer<I, D, T, R>
+struct Iter<I, D, T, R>
 where
     I: Iterator<Item = Message<D, T, R>>,
     T: Hash+Ord+Lattice+Clone,
@@ -241,7 +241,7 @@ where
 
 I thought for demonstration purposes I would have the iterator produce the `update` and `finish` statements we had back in the simple history. For reasons, I'd rather produce a batch of updates and one `finish` statement, all at the same time (it is easier to do that once for each call, than to trickle out updates one by one; you need another state machine to do that).
 ```rust
-impl<D, T, R, I> Iterator for Ordered<I, D, T, R>
+impl<D, T, R, I> Iterator for Iter<I, D, T, R>
 where
     I: Iterator<Item = Message<D, T, R>>,
     T: Debug+Hash+Ord+Lattice+Clone,
@@ -274,7 +274,7 @@ The main thing we'll do in this cut is to process each received message, either 
                 );
                 // Decrement our counts of novel and now-accounted-for messages.
                 self.updates_frontier.update_iter(updates.iter().map(|(_,t,_)| (t.clone(), -1)));
-                // Record the messages in our de-duplication collection.
+                // Record the messages in our deduplication collection.
                 self.updates.extend(updates.into_iter());
             },
             Message::Progress(progress) => {
@@ -294,7 +294,7 @@ The main thing we'll do in this cut is to process each received message, either 
     // If we've exhausted our iterator, we have nothing to say.
     None
 ```
-The only real work happens received `Updates`, where we discard any updates that are 1. for times that we have already resolved, or 2. are already present in our deduplication stash. Surviving updates result in a decrement for the expected count at that time (even if the expected count is not yet postive; that message might come later), and get stashed to help with future deduplication.
+The only real work happens when we receive `Updates`, where we discard any updates that are 1. for times that we have already resolved, or 2. are already present in our deduplication stash. Surviving updates result in a decrement for the expected count at that time (even if the expected count is not yet postive; that message might come later), and get stashed to help with future deduplication.
 
 The two remaining bits of logic are 1. how to integrate progress statements, which require some care because there may be gaps in our timeline, and 2. how to close out intervals of time when appropriate, which also requires some care.
 
@@ -357,3 +357,5 @@ I'm sure it's been a bit of an exercise, but I hope the hand-drawn pictures have
 We've seen how you can set up a protocol that records the timestamped changes collections undergo, in a way that is robust to duplication and reordering (and re-batching, for what that's worth). Just how exciting this is remains to be seen, but my sense is that this introduces substantial operational simplicity to settings where systems fail, systems lag, and generally folks may need to repeat work to be sure that it has been done. If multiple systems need to stay live as part of a live migration from one to another, or if the data itself needs to be migrated from relatively faster and pricier storage off to somewhere colder, this protocol seems helpful.
 
 There are surely other protocols that provide qualitatively similar properties; I'm not trying to claim that we've invented anything here. But, part of the exercise is making sure you understand a thing, and I've certainly been helped by that. I hope you have as well!
+
+Stay tuned for part 2, where we talk about how you would both write out and read back this data in a data-parallel streaming system!
