--- a/posts/2020-08-13.md
+++ b/posts/2020-08-13.md
@@ -1,6 +1,6 @@
 # Lateral Joins and Demand-Driven Queries
 
-This post is also available on [the Materialize blog]().
+This post is also available on [the Materialize blog](https://materialize.io/blog).
 
 In today's post we are going to show off Materialize's `LATERAL` join ([courtesy `benesch`](https://github.com/MaterializeInc/materialize/pull/3713)), and how you can use it to implement some pretty neat query patterns in an incremental view maintenance engine!
 
