respond to feedback

--- a/posts/2020-09-05.md
+++ b/posts/2020-09-05.md
@@ -166,6 +166,14 @@ The `ArrangeBy` expression is produced internally, and will create an arrangemen
 
 Let's discuss each of these cases, recalling that the size of an arrangement is proportional to the distinct values it maintains.
 
+### Stateless expressions
+
+Many of the expressions in query plans do not require arrangements.
+For example, the `Filter` expressions above can be applied record-by-record without retaining any historical state.
+Materialize has many "stateless" expressions, including `Filter`, `Map`, `Project`, `Union`, `Negate`, `FlatMap`, `Get`, and `Let`.
+These expressions do not require arrangements.
+This is great news.
+
 ### Join Expressions
 
 Materialize's `Join` expression describes a relational equijoin between multiple inputs.
@@ -215,7 +223,7 @@ For example, this fragment could be the dataflow for `0%`:
 Notice that neither `0%` nor the intermediate results are arranged.
 The plan requires a dataflow like the above starting from each of the inputs.
 The dataflows may require different arrangements for the same other inputs.
-The total number of arrangements can large, but often the arrangements already exist and can be re-used.
+The total number of arrangements can be large, but often the arrangements already exist and can be re-used.
 
 Delta joins are a useful way to minimize new arrangements, but they are also an advanced topic.
 We will detail the delta join plan in a future post.
@@ -248,15 +256,8 @@ Each of the operators in this sequence must maintain an arrangement for its inpu
 
 ### Threshold expressions
 
-Materialize's `Threshold` expression is applied to colleciton that may have negative accumulations to ensure all accumulations are non-negative.
+Materialize's `Threshold` expression is applied to collection that may have negative accumulations to ensure all accumulations are non-negative.
 It uses a differential dataflow `Reduce` operator to do this, and so arranges its input and its output.
-
-### Other operators
-
-Materialize has many other operators, with names like `Filter`, `Map`, `Project`, `Union`, `Negate`, `FlatMap`
-, and more.
-These operators do not maintain arrangements.
-This is great news.
 
 ## Diagnosing Arrangement Use.
 
@@ -398,7 +399,7 @@ materialize=> select * from mz_records_per_dataflow order by id;
 ```
 There are no records there, but we can certainly see a new entry for our `transfers` view.
 
-We can now investigate `mz_arranement_sizes`, ordering by `operator` to see our new operators at the end.
+We can now investigate `mz_arrangement_sizes`, ordering by `operator` to see our new operators at the end.
 ```
 materialize=> select * from mz_arrangement_sizes mas, mz_dataflow_operators mdo where mas.operator = mdo.id and mas.worker = mdo.worker order by operator;
  operator | worker | records | batches
@@ -417,9 +418,18 @@ It turns out, these are three arrangements for the join (one arrangement can be 
 
 ## Improving Resource Use
 
-Materialize will happily use the memory you instruct it to you, by supplying it with queries and data.
+Materialize will happily use the memory you instruct it to use, as you supply it with queries and data.
 In many cases it has techniques it can apply to reduce the memory footprint, but it may also need your help.
 Let's talk through a few examples where you can reframe the query to reduce the amount of memory required.
+
+### Inspect query plans
+
+Materialize's `explain plan for <query>` command will report how your query would be implemented.
+These plans are one of the first places to look if your query uses more resources than you expect.
+In particular, see if you can recognize your original query structure in the plans, and identify the role of each stateful expression.
+For each stateful expression, determine if you believe the accumulated input should be reasonable (the implementation will maintain this accumulated input).
+
+If any of these steps fail, it may be important to reframe your query (and perhaps file bugs against Materialize's query planning).
 
 ### Simplifying Queries
 
